# Huffman-Compressor

./: CMakeLists.txt  huffman_tool.cpp  main.cpp  vcpkg.json
huffman/: CMakeLists.txt  bit_sequence.cpp  bit_sequence.h  cool_char.cpp  cool_char.h  cool_sequence.cpp  cool_sequence.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  input_wrapper.cpp  input_wrapper.h  output_wrapper.cpp  output_wrapper.h
integration-tests/: tests.cpp  tests.py
unit-tests/: tests.cpp
